<resources>

    <string name="app_name">RkrkSkb</string>
    <string name="widget_app_name">らくらく出勤簿</string>
    <string name="data_service">DataService</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_rkrk_skb">RkrkSkbActivity</string>
    <string name="syukkin_btn_name">出勤</string>
    <string name="taikin_btn_name">退勤</string>
    <string name="kyuuka_btn_name">休暇</string>
    <string name="ago_month">前月</string>
    <string name="next_month">次月</string>
    <string name="dispdate">yyyy/mm</string>

</resources>