<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical" >

    <Button
        android:id="@+id/syukkin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/syukkin_btn_name" />

    <Button
        android:id="@+id/taikin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/syukkin_button"
        android:gravity="center"
        android:text="@string/taikin_btn_name" />

    <Button
        android:id="@+id/kyuuka_buttton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/taikin_button"
        android:gravity="center"
        android:text="@string/kyuuka_btn_name" />

</RelativeLayout>
