<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout_all"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" 
    android:layout_y="22dip" 
    android:layout_x="46dip" 
    android:orientation="vertical" 
    android:gravity="top"
    android:background="#ffffcc">
 
    <LinearLayout 
        android:id="@+id/LinearLayout_date" 
        android:layout_height="wrap_content" 
        android:layout_width="fill_parent" 
        android:orientation="horizontal"  
        android:gravity="center" 
        android:background="#ffff66">
 
        <TextView 
            android:id="@+id/textView_last_month" 
            android:layout_width="wrap_content"  
            android:layout_height="fill_parent"
            android:text="@string/ago_month"
            android:textStyle="bold"
            android:textSize="15dp" 
            android:textColor="#0000ff"  
            android:gravity="center"
            android:background="#00ffffff"/>
 
        <TextView 
            android:id="@+id/textView_date"
            android:layout_height="wrap_content" 
            android:layout_width="wrap_content" 
            android:layout_marginBottom="3dp" 
            android:layout_marginTop="3dp" 
            android:layout_marginLeft="30dp" 
            android:layout_marginRight="30dp"
            android:text="@string/dispdate"
            android:textStyle="bold"
            android:textSize="30dp" 
            android:textColor="#ff0000" 
            android:gravity="center" 
            android:background="#00ffffff"/>
 
        <TextView 
            android:id="@+id/textView_next_month" 
            android:layout_width="wrap_content"  
            android:layout_height="fill_parent"
            android:text="@string/next_month"
            android:textStyle="bold"
            android:textSize="15dp" 
            android:textColor="#0000ff" 
            android:gravity="center" 
            android:background="#00ffffff"/>
    </LinearLayout>
 
    <ListView
        android:id="@+id/listView"
        android:layout_height="0dp" 
        android:layout_width="fill_parent"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" 
        android:layout_marginBottom="5dp" 
        android:layout_weight="1" 
        android:fadingEdgeLength="30dp">
    </ListView>
 
</LinearLayout>